# readright

./: .gitignore  Dockerfile  LICENSE  README.md  nginx.conf  pyproject.toml
mcp-server/: README.md  pyproject.toml
mcp-server/src/readright_mcp/: __init__.py  server.py
src/envelope/: __init__.py  envelope.py  merchant_patterns.py  parser.py  registry.py
src/envelope/formatters/: __init__.py  camt053.py  mt940.py
src/envelope/schemas/: __init__.py  banking.py  chat.py
src/envelope/sources/: __init__.py  amazon_orders.py  apple_health.py  audio_metadata.py  bank_abn.py  bank_barclays.py  bank_bofa.py  bank_bunq.py  bank_chase.py  bank_citi.py  bank_hsbc.py  bank_ing.py  bank_monzo.py  bank_n26.py  bank_ofx.py  bank_qif.py  bank_rabo.py  bank_revolut.py  bank_triodos.py  bank_wells.py  bank_wise.py  bookmarks.py  cashapp.py  chrome_history.py  csv_generic.py  discord.py  email_mbox.py  exact_online.py  excel_generic.py  facebook_messages.py  google_contacts.py  google_takeout_activity.py  ics_calendar.py  image_metadata.py  instagram.py  instagram_posts.py  json_generic.py  linkedin.py  netflix.py  paypal.py  (+16 more)
tests/: test_formatters.py  test_parsers.py
tools/: generate_source_catalog.py
