[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envelopeai"
version = "0.1.0"
description = "Wrap data with context for AI. Source registry + parser + schema annotation + context delivery."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Waydream B.V.", email = "hello@ferran.io" }]
keywords = ["ai", "data", "context", "parsing", "llm", "agents", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "chardet>=5.0",
]

[project.optional-dependencies]
banking = ["mt-940>=4.0", "pycamt>=1.0"]
llm = ["instructor>=1.0", "anthropic>=0.40"]
api = ["fastapi>=0.115", "uvicorn>=0.30", "python-multipart>=0.0.9", "asyncpg>=0.29", "mollie-api-python>=3.0", "httpx>=0.27"]
all = ["envelopeai[banking,llm,api]"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.urls]
Homepage = "https://github.com/klapgeep/envelope"
Documentation = "https://envelope.ferran.io"

[tool.hatch.build.targets.wheel]
packages = ["src/envelope"]

[tool.ruff]
target-version = "py311"
line-length = 100
