[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readright-mcp"
version = "0.1.0"
description = "MCP server for ReadRight — parse any file into structured, AI-ready output."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Waydream B.V.", email = "hello@readright.ai" }]
keywords = ["mcp", "ai", "parsing", "readright", "envelope", "context", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
    "envelopeai>=0.1.0",
]

[project.scripts]
readright-mcp = "readright_mcp.server:main"

[project.urls]
Homepage = "https://readright.ai"
Repository = "https://github.com/waydream-ai/readright"
Issues = "https://github.com/waydream-ai/readright/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/readright_mcp"]
